[package]
name = "pyth-twap"
version = "0.1.0"
authors = ["Conner <ConnerNGallagher@gmail.com>"]
edition = "2018"
description = "using pyth price oracle to calculate twap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.6.7"
solana-sdk = "1.6.7"
solana-program = "1.6.7"
clap = "2.33.3"
pyth-client = "0.1.1"
chrono = "0.4"
